Fixed out of bounds bug on face tracking

--- a/assessment_3/.vscode/settings.json
+++ b/assessment_3/.vscode/settings.json
@@ -86,7 +86,8 @@
         "shared_mutex": "cpp",
         "cfenv": "cpp",
         "typeindex": "cpp",
-        "valarray": "cpp"
+        "valarray": "cpp",
+        "*.ipp": "cpp"
     },
     "C_Cpp.default.intelliSenseMode": "gcc-x64"
 }
