Refactored to use ofxHTTP

--- a/assessment_3/.vscode/settings.json
+++ b/assessment_3/.vscode/settings.json
@@ -87,7 +87,8 @@
         "cfenv": "cpp",
         "typeindex": "cpp",
         "valarray": "cpp",
-        "*.ipp": "cpp"
+        "*.ipp": "cpp",
+        "netfwd": "cpp"
     },
     "C_Cpp.default.intelliSenseMode": "gcc-x64"
 }
