--- a/assessment_3/.vscode/launch.json
+++ b/assessment_3/.vscode/launch.json
@@ -9,7 +9,11 @@
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceRoot}",
-            "environment": [],
+            "environment": [
+                {"name": "VID_OUT_DIR", "value": "/home/connorgm/deco3200-interactive-product-design/assessment_3/control_centre/webcam_out"},
+                {"name": "CONTROL_CENTRE_RECIEVER_PORT", "value": "8001"},
+                {"name": "RECOGNISER_PORT", "value": "8002"},
+            ],
             "externalConsole": false,
             "linux": {
                 "MIMode": "gdb",
