--- a/assessment_3/.vscode/settings.json
+++ b/assessment_3/.vscode/settings.json
@@ -88,7 +88,8 @@
         "typeindex": "cpp",
         "valarray": "cpp",
         "*.ipp": "cpp",
-        "netfwd": "cpp"
+        "netfwd": "cpp",
+        "tensor": "cpp"
     },
     "C_Cpp.default.intelliSenseMode": "gcc-x64"
 }
