--- a/assessment_3/displays/displays/package.json
+++ b/assessment_3/displays/displays/package.json
@@ -1,53 +1,38 @@
 {
-    "name": "psd2html-boilerplate",
-    "version": "1.0.0",
-    "main": "./src/server.js",
-    "scripts": {
-        "serve": "webpack-dev-server --config ./webpack/config.dev.babel.js --mode development ",
-        "start": "node ./webpack/server.js",
-        "start-yarn": "node ./webpack/server.js --yarn",
-        "build": "webpack --config ./webpack/config.prod.babel.js --mode production --env.production",
-        "eslint": "eslint src/**/*.js",
-        "eslint-fix": "eslint src/**/*.js --fix"
-    },
-    "repository": "https://gitlab.com/redlg/psd2html-boilerplate.git",
-    "author": "izica <artemiztomska@gmail.com>",
-    "license": "MIT",
-    "dependencies": {
-        "jquery": "^3.3.1"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.2.2",
-        "@babel/plugin-proposal-class-properties": "^7.3.0",
-        "@babel/plugin-proposal-decorators": "^7.3.0",
-        "@babel/plugin-proposal-export-default-from": "^7.2.0",
-        "@babel/preset-env": "^7.3.0",
-        "@babel/register": "^7.4.0",
-        "autoprefixer": "^9.4.7",
-        "babel-eslint": "^10.0.1",
-        "babel-loader": "^8.0.5",
-        "clean-webpack-plugin": "^1.0.1",
-        "copy-webpack-plugin": "^4.6.0",
-        "css-loader": "^2.1.0",
-        "cssnano": "^4.1.8",
-        "eslint": "^5.12.1",
-        "eslint-config-airbnb-base": "^13.1.0",
-        "eslint-loader": "^2.1.1",
-        "eslint-plugin-import": "^2.14.0",
-        "express": "^4.16.4",
-        "extract-loader": "^3.1.0",
-        "extract-text-webpack-plugin": "^4.0.0-beta.0",
-        "file-loader": "^3.0.1",
-        "friendly-errors-webpack-plugin": "^1.7.0",
-        "html-loader": "^0.5.5",
-        "html-webpack-plugin": "^3.2.0",
-        "node-sass": "^4.11.0",
-        "postcss-loader": "^3.0.0",
-        "sass-loader": "^7.1.0",
-        "style-loader": "^0.23.1",
-        "webpack": "^4.29.0",
-        "webpack-cli": "^3.2.1",
-        "webpack-dev-server": "^3.1.14",
-        "webpack-replace-loader": "^1.3.0"
-    }
+  "name": "ultimate-hot-reloading-example",
+  "version": "1.0.0",
+  "private": true,
+  "description": "React example",
+  "author": "Glen Mailer <glen@stainlessed.co.uk>",
+  "license": "MIT",
+  "scripts": {
+    "start": "babel-node server.js",
+    "lint": "eslint ."
+  },
+  "dependencies": {
+    "babel-cli": "^6.10.1",
+    "babel-core": "^6.10.4",
+    "babel-eslint": "^8.2.3",
+    "babel-loader": "^7.1.1",
+    "babel-plugin-transform-runtime": "^6.9.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-register": "^6.9.0",
+    "babel-runtime": "^6.9.2",
+    "chokidar": "^2.0.3",
+    "css-loader": "^0.28.11",
+    "css-modules-require-hook": "^4.0.1",
+    "eslint": "^4.19.1",
+    "express": "^4.14.0",
+    "express-ws": "^4.0.0",
+    "node-sass": "^4.13.0",
+    "osc": "^2.3.1",
+    "prop-types": "^15.6.1",
+    "sass-loader": "^8.0.0",
+    "style-loader": "^0.21.0",
+    "webpack": "^4.8.3",
+    "webpack-dev-middleware": "^3.1.3",
+    "webpack-hot-middleware": "^2.12.1",
+    "webpack-node-externals": "^1.7.2",
+    "ws": "^7.2.0"
+  }
 }
