--- a/assessment_3/displays/displays/.babelrc
+++ b/assessment_3/displays/displays/.babelrc
@@ -1,6 +1,14 @@
 {
   "presets": [
-    "env"
+    "@babel/preset-env"
   ],
-  "plugins": ["transform-runtime"]
+  "plugins": [
+    [
+      "@babel/plugin-transform-runtime",
+      {
+        "corejs": 2
+      }
+    ],
+    ["@babel/plugin-proposal-class-properties"]
+  ]
 }
