--- a/assessment_3/displays/displays/package.json
+++ b/assessment_3/displays/displays/package.json
@@ -6,19 +6,23 @@
   "author": "Glen Mailer <glen@stainlessed.co.uk>",
   "license": "MIT",
   "scripts": {
-    "start": "babel-node server.js",
+    "start": "yarn run babel-node server.js",
     "lint": "eslint ."
   },
   "dependencies": {
-    "babel-cli": "^6.10.1",
-    "babel-core": "^6.10.4",
-    "babel-eslint": "^8.2.3",
-    "babel-loader": "^7.1.1",
-    "babel-plugin-transform-runtime": "^6.9.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-register": "^6.9.0",
-    "babel-runtime": "^6.9.2",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/node": "^7.7.0",
+    "@babel/plugin-proposal-class-properties": "^7.7.0",
+    "@babel/plugin-syntax-class-properties": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/register": "^7.0.0",
+    "@babel/runtime-corejs2": "^7.0.0",
+    "babel-eslint": "^9.0.0",
+    "babel-loader": "^8.0.0",
     "chokidar": "^2.0.3",
+    "clamp": "^1.0.1",
     "css-loader": "^0.28.11",
     "css-modules-require-hook": "^4.0.1",
     "eslint": "^4.19.1",
@@ -29,6 +33,7 @@
     "prop-types": "^15.6.1",
     "sass-loader": "^8.0.0",
     "style-loader": "^0.21.0",
+    "typer-js": "^5.0.2",
     "webpack": "^4.8.3",
     "webpack-dev-middleware": "^3.1.3",
     "webpack-hot-middleware": "^2.12.1",
