--- a/assessment_3/displays/displays/package.json
+++ b/assessment_3/displays/displays/package.json
@@ -39,5 +39,8 @@
     "webpack-hot-middleware": "^2.12.1",
     "webpack-node-externals": "^1.7.2",
     "ws": "^7.2.0"
+  },
+  "devDependencies": {
+    "webpack-cli": "^3.3.10"
   }
 }
